# aq_ai_agent

./: .env.example  .gitignore  README.md  agent.py  fastagent.config.yaml  fastagent.jsonl  fastagent.secrets.yaml.example  pyproject.toml  requirements.txt
src/: aq_mcp_server.py  main.py  routes.py
src/config/: settings.py
tests/: conftest.py  test_agent.py  test_aq_mcp_server.py  test_main.py
