[project]
name = "test-mcp"
version = "0.1.0"
description = "A working example to create a FastAPI server with SSE-based MCP support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "unicorn>=2.1.3",
]

[project.scripts]
start = "server:run"

[tool.poetry]
name = "aq_ai_agent"
version = "0.1.0"
description = "FastAPI MCP SSE + Aquarium API"
authors = ["Sergey Chernyakov <chernyakov.sergey@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.12"
httpx = "^0.28.1"
fast-agent-mcp = "^0.2.20"
unicorn = "^2.1.3"
mcp = { version = "1.6.0", extras = ["cli"] }

crm-aq = { git = "https://github.com/Saber-Automations/crm-aq.git", rev = "main" }

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
